# TDD_ForEmbeddedC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  tdd_for_embedded_c.code-workspace
App/: CMakeLists.txt  CmakeLists.txt  HelloWorld.c  main.c
Drivers/: LedDriver.c  LedDriver.h
Tests/: CMakeLists.txt  CmakeLists.txt  testFrameWork.cmake
Tests/Drivers/LedDriver/: CMakeLists.txt  CmakeLists.txt  LedDriver.code-workspace
Tests/Drivers/LedDriver/CppUtest/: LedDriverTest.cpp
Tests/Drivers/LedDriver/Unity/: LedDriverTest.c  LedDriverTestRunner.c  main.c
Tests/LedDriver/: CmakeLists.txt  LedDriver.c  LedDriver.h
Tests/LedDriver/Unity/: LedDriverTest.c
Tests/Mocks/include/: RuntimeErrorStub.h
Tests/Utils/CircularBuffer/: CMakeLists.txt
Tests/Utils/Random/: CMakeLists.txt  CmakeLists.txt
Tests/Utils/Random/CppUtest/: RandomTest.cpp  main.cpp
Tests/Utils/Random/Unity/: RandomTest.c  RandomTestRunner.c  main.c
Tests/WithCppUtest/: CmakeLists.txt
Tests/WithCppUtest/stdio/: CmakeLists.txt  stdio.code-workspace
Tests/WithUnity/stdio/: CmakeLists.txt  SprintfTestRunner.c  stdio.code-workspace
Tests/app/: dummyTest.cpp
Tests/stdio/: CMakeLists.txt  CmakeLists.txt
Tests/stdio/CppUtest/: SprintfTest.cpp  main.cpp
Tests/stdio/Unity/: SprintfTest.c  SprintfTestRunner.c  main.c
Tests/utils/: CircularBufferTest.cpp
Utils/: CircularBuffer.c  CircularBuffer.h  Random.c  Random.h  RuntimeError.c
src/app/: CircularBufferHelloWorld.c  RandomHelloWorld.c  main.c
src/app/include/: HelloWorld.h
src/drivers/: LedDriver.c
src/utils/: CircularBuffer.c  Random.c  RuntimeError.c
src/utils/circularBufferPreTDD/: CircularBufferPreTDD.h
src/utils/include/: Macros.h  Random.h  RuntimeError.h
tests/mocks/: RuntimeErrorStub.c
tools/cmake/: appDetailedCoverage.txt  buildWCmake.sh  cleanWCmake.sh  configCmakeBuild.sh  genGcovrReports.sh  rebuildWCmake.sh  runUnitTests.sh
tools/cmake/app/: CMakeLists.txt
tools/cmake/tests/: CMakeLists.txt  testFrameWork.cmake
tools/cmake/tests/app/: CMakeLists.txt
tools/cmake/tests/drivers/: CMakeLists.txt
tools/cmake/tests/utils/: CMakeLists.txt
